change cd workflow test

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,6 @@ jobs:
         - run: | 
             echo $(pwd)
         - run: |
-            cd day1
+            echo $(ls)
         - run: |
             echo $(pwd)
