--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,22 +14,15 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v4
 
-        - name: Create directory
-          shell: bash
-          run: mkdir ./dist/
-        
-        - name: Create health and version files
+        - name: Secret
           uses: asmaelkb/AOC2023/create-files@main
           with:
-            package-name: engine-starter
-            package-version: 2.0.0
+            mytoken: ${{ secrets.MYTOKEN }}
 
-        - name: Move to dist
-          shell: bash
-          run: | 
-            mv health version ./dist
-            echo $(ls ./dist)
-            echo $(ls)
+        - name: Encoded secret
+          uses: asmaelkb/AOC2023/create-files@main
+          with:
+            mytoken: ${{ secrets.MYTOKEN | b64enc }}
 
 
 
