--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
 
   call-update-poeditor-matrix:
     runs-on: ubuntu-latest
+    needs: call-workflow-update-poeditor-matrix
     steps:
       - name: Update POEditor Matrix
         shell: bash
