--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,18 +1,20 @@
 name: CD
 on:
-  workflow_dispatch:
-    inputs:
-      env:
-        description: Environment
-        type: string
-        required: true
+  push:
+    branches:
+      - main
 
 jobs:
+  call-workflow-update-poeditor-matrix:
+    uses: asmaelkb/AOC2023/.github/workflows/update-poeditor-matrix.yaml@main
+    secrets: inherit
+
   call-update-poeditor-matrix:
     runs-on: ubuntu-latest
+    needs: call-workflow-update-poeditor-matrix
     steps:
-      - name: Deploy to ${{ inputs.env }}
+      - name: Update POEditor Matrix
         shell: bash
         run: |
-          echo "Deployed to ${{ inputs.env }}"
+          echo "Version : ${{ needs.call-workflow-update-poeditor-matrix.outputs.release-version }}"
 
