--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -4,8 +4,9 @@ name: CI Data
 
 on:
   schedule:
-    - cron: '20 9 * * *'
-
+    - cron: '24 9 * * *'
+  workflow_dispatch:
+  
 jobs:
   call-update-poeditor-matrix:
     runs-on: ubuntu-latest
