--- a/.github/workflows/inputs.yml
+++ b/.github/workflows/inputs.yml
@@ -32,7 +32,7 @@ jobs:
                          | map(select(. != ""))           # ignore fragments vides
                          | .[]
                         )
-                      | "\($e.key)\(.)"
+                      | "\($e.key)-\(.)"
                 ]
                 | join(",")
               '
