--- a/.github/workflows/input_wkf.yml
+++ b/.github/workflows/input_wkf.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Set version
         id: build
-        run:|
-          echo "version=2.0.0-SNAPSHOT" >> "$GITHUB_OUTPUT"
+        shell: bash
+        run: echo "version=2.0.0-SNAPSHOT" >> "$GITHUB_OUTPUT"
