--- a/.github/workflows/input_wkf.yml
+++ b/.github/workflows/input_wkf.yml
@@ -1,6 +1,11 @@
 name: Input WORKFLOW
 on:
   workflow_call:
+    outputs:
+      version:
+        description: Release version
+        value: ${{ jobs.compute-versions.outputs.version }}
+
 
 jobs: 
   build:
