--- a/.github/workflows/input_wkf.yml
+++ b/.github/workflows/input_wkf.yml
@@ -4,7 +4,7 @@ on:
     outputs:
       version:
         description: Release version
-        value: ${{ jobs.compute-versions.outputs.version }}
+        value: ${{ jobs.build.outputs.version }}
 
 
 jobs: 
